changes for Tom M review comments